# post-rs

./: .gitignore  Cargo.toml  README.md  dev.http
post-client/: Cargo.toml  index.html  package.json  pnpm-lock.yaml
post-client/src/: main.rs
post-client/src/routes/: index.svelte  store.ts
post-lib/: Cargo.toml
post-lib/src/: lib.rs
post-server/: Cargo.toml
post-server/src/: lib.rs  main.rs
post-server/src/post_db/: mod.rs
post-server/src/requests/: mod.rs
post-server/tests/: integration_tests.rs
